--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
             <div class="footer-contato">
                 <h3 class="font-2-l-b cor-0">Contato</h3>
                 <ul class="font-2-m cor-5">
-                    <li>+55 13 991577646</li>
-                    <li>contato@bikcraft.com</li>
+                    <li><a href="tel: +5513991577646">(13) 99157-7646</a></li>
+                    <li><a href="mailto:boracinidev@gmail.com">contato@bikcraft.com</a></li>
                     <li>Av. Dom Pedro I, 723 - Itaguaí</li>
                     <li>São Paulo - SP</li>
                 </ul>
@@ -175,10 +175,10 @@
                 <h3 class="font-2-l-b cor-0">Informações</h3>
                 <nav>
                     <ul class="font-1-m cor-5">
-                        <li><a href="./">Bicicletas</a></li>
-                        <li><a href="./">Seguros</a></li>
-                        <li><a href="./">Contato</a></li>
-                        <li><a href="./">Termos e Condições</a></li>
+                        <li><a href="./bicicletas.html">Bicicletas</a></li>
+                        <li><a href="./seguros.html">Seguros</a></li>
+                        <li><a href="./contato.html">Contato</a></li>
+                        <li><a href="./termos.html">Termos e Condições</a></li>
                     </ul>
                 </nav>
             </div>
