--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                 <span class="font-2-m cor-8">R$ 2499</span>
             </li>
         </a>
-        <li><a href=".bicicletas/nimbus.html">
+        <li><a href="./bicicletas/nimbus.html">
             <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Preta">
             <h3 class="font-1-xl">Nimbus Stark</h3>
             <span class="font-2-m cor-8">R$ 4999</span>
         </li>
     </a>
-    <li><a href=".bicicletas/nebula.html">
+    <li><a href="./bicicletas/nebula.html">
         <img src="./img/bicicletas/nebula-home.jpg" alt="Bicicleta Preta">
         <h3 class="font-1-xl">Nebula Cosmic</h3>
         <span class="font-2-m cor-8">R$ 3999</span>
